Feat: Changed DTO and added annotations